LU-7799 hsm: use correct record start index for actions

In mdt_hsm_actions_proc_show() pass index of the last printed record
to the startidx of llog_cat_process(). This avoids an issue where the
next record to be printed would have been skipped.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: Ic8516d6a9429a21bf1f8d435d60bc9e8801982a5
Reviewed-on: http://review.whamcloud.com/18525
Tested-by: Jenkins
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Henri Doreau <henri.doreau@cea.fr>
Reviewed-by: jacques-Charles Lafoucriere <jacques-charles.lafoucriere@cea.fr>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>